--- a/spec/definitions/Error.yaml
+++ b/spec/definitions/Error.yaml
@@ -1,8 +1,13 @@
 type: object
 properties:
-  status:
-    type: integer
-    minimum: 100
-    maximum: 600
-  error:
+  request_id:
     type: string
+    example: 0HL80RJLS76I7
+  error_type:
+    type: string
+    example: request_invalid_error
+  error_codes:
+    type: array
+    items:
+      type: string
+      example: payment_source_required
