--- a/spec/definitions/ServerTimestamp.yaml
+++ b/spec/definitions/ServerTimestamp.yaml
@@ -1,4 +1,4 @@
 type: string
-description: Read-only timestamp, automatically assigned on back-end.
+description: Read-only UTC timestamp, automatically assigned by us.
 format: date-time
 readOnly: true
