--- a/spec/definitions/Error.yaml
+++ b/spec/definitions/Error.yaml
@@ -5,9 +5,4 @@ properties:
     example: 0HL80RJLS76I7
   error_type:
     type: string
-    example: request_invalid_error
-  error_codes:
-    type: array
-    items:
-      type: string
-      example: payment_source_required
+    example: request_malformed
