--- a/spec/definitions/Payments/PaymentRequest.yaml
+++ b/spec/definitions/Payments/PaymentRequest.yaml
@@ -6,7 +6,7 @@ properties:
   amount:
     type: integer
     description: |
-      The amount to charge the payment source in the major currency.
+      The payment amount in the major currency.
       Omitting the amount or providing 0 will perform a card verification.
     minimum: 0
     example: 6540
@@ -19,26 +19,26 @@ properties:
     minLength: 3
   source:
     type: object
-    description: The charge payment source
+    description: The payment source
     allOf:
       - $ref: '#/definitions/CardSource'
   capture:
     type: boolean
-    description: Whether to capture the charge. The default is `true`
+    description: Whether to capture the payment. The default is `true`. Payments can also be captured in the Checkout Hub.
     example: true
   capture_on:
     type: integer
     format: int64
-    description: A unix timestamp that determines when the charge should be captured
+    description: A unix timestamp that determines when the payment should be captured
     example: 1509041202
   3ds:
     type: boolean
-    description: Whether to process this as a 3D-Secure charge
+    description: Whether to process this payment as a 3D-Secure
     example: true
   attempt_n3d: 
     type: boolean
     description: |
-      Determines whether to attempt a 3D-Secure charge as non-3DS 
+      Determines whether to attempt a 3D-Secure payment as non-3DS 
       should the card issuer not be enrolled.
       [Read more](https://docs.checkout.com/getting-started/merchant-api/3d-secure-charges/attempt-non-3d-secure-charge) for more information.
     example: true
@@ -52,8 +52,8 @@ properties:
   destinations:
     type: array
     items:
-      - $ref: '#/definitions/ChargeDestination'
+      - $ref: '#/definitions/PaymentDestination'
     minItems: 0
     description: |
-      For OpenPay charges, destinations determine the proportion of the charge amount that should 
+      For OpenPay payments, destinations determine the proportion of the payment amount that should 
       be credited to other OpenPay accounts
