--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -1,5 +1,5 @@
 type: object
-description: Charge response
+description: Payment response
 required:
   - id
   - amount
@@ -10,29 +10,29 @@ required:
   - _links
 properties:
   id:
-    description: Charge unique identifier
+    description: Payment unique identifier
     readOnly: true
     allOf:
-      - $ref: '#/definitions/ChargeId'
+      - $ref: '#/definitions/PaymentId'
   amount:
     type: integer
-    description: The amount charged to the payment source
+    description: The payment amount 
     example: 6540
   currency:
     type: string
-    description: The three-letter ISO currency code of the charge
+    description: The three-letter ISO currency code of the payment
     example: USD
     maxLength: 3
     minLength: 3
   status:
     type: string
-    description: The status of the charge
+    description: The status of the payment
     enum:
       - Authorised
       - Declined
   auth_code:
     type: string
-    description: The acquirer authorisation code if the charge was Authorised
+    description: The acquirer authorisation code if the payment was Authorised
     example: "643381"
   response_code:
     type: string
@@ -47,17 +47,17 @@ properties:
     description: The Gateway response details
     example: "Approved"
   source:
-    description: The charge payment source, if this is a reusable source
+    description: The payment source, if this is a reusable source
     type: object
     allOf:
       - $ref: '#/definitions/PaymentSource'
   processed_on:
-    description: The date/time the charge was processed
+    description: The date/time the payment was processed
     allOf:
       - $ref: '#/definitions/ServerTimestamp'
   _links:
     type: object
-    description: The links related to the charge
+    description: The links related to the payment
     readOnly: true
     minItems: 1
     properties:
@@ -65,12 +65,12 @@ properties:
         type: object
         allOf:
           - $ref: '#/definitions/NewLink'
-        description: The URI of the charge
+        description: The URI of the payment
       capture:
         type: object
         allOf:
           - $ref: '#/definitions/NewLink'
-        description: A link to capture the charge if applicable
+        description: A link to capture the payment, where applicable
     required:
       - self
           
