Added source id description

--- a/spec/paths/payments.yaml
+++ b/spec/paths/payments.yaml
@@ -10,6 +10,8 @@ post:
     - Payment source identifier e.g. `src_3cdac40561494c5aaa8f8c81ef245c10`
     - Customer identifier e.g. `cust_2fc10b92693041f280bbe12cd787b47c`
 
+    Source identifiers include existing cards as well as alternative payment sources. 
+
     Some payment requests may require the owner to be redirected to a third party site prior to completing the payment, 
     for example, 3D-Secure payments will redirect the card holder to the issuer's 3D-Secure page. In these cases a HTTP 202 response will be returned, containing a redirect link.
 
