--- a/spec/paths/payments.yaml
+++ b/spec/paths/payments.yaml
@@ -36,7 +36,7 @@ post:
       schema:
         $ref: '#/definitions/PaymentRedirectResponse'
     '401':
-      description: Unauthorised
+      description: Unauthorized
     '422':
       $ref: '#/responses/InvalidDataError'
         
