--- a/spec/paths/payments@{id}.yaml
+++ b/spec/paths/payments@{id}.yaml
@@ -14,6 +14,6 @@ get:
     '200':
       description: Payment was retrieved successfully
     '401':
-      description: Unauthorised
+      description: Unauthorized
     '404':
       description: Payment not found
