--- a/spec/definitions/Payments/PaymentRequest.yaml
+++ b/spec/definitions/Payments/PaymentRequest.yaml
@@ -46,16 +46,20 @@ properties:
     format: email
     description: An optional email address to associate with the customer
     example: darkknight@batcave.com
+  reference:
+    type: string
+    description: A reference you can later use to identify this payment such as an order number
+    example: ORD-5023-4E89
   description:
     type: string
     description: A description of the payment
     example: Set of 3 masks
-  reference:
-    type: string
-    description: A reference you can later use to refer to this payment
-    example: ORD-5023-4E89
   billing_descriptor:
     $ref: '#/definitions/BillingDescriptor'
+  customer_ip:
+    description: The customer's IP address. Required for certain risk checks
+    allOf:
+      - $ref: '#/definitions/IPAddress'
   destinations:
     type: array
     items:
