Added payment recipient

--- a/spec/definitions/Payments/PaymentRequest.yaml
+++ b/spec/definitions/Payments/PaymentRequest.yaml
@@ -74,6 +74,8 @@ properties:
     description: Indicates whether risk checks for the requested payment should be skipped
     default: false
     example: true
+  recipient:
+    $ref: '#/definitions/PaymentRecipient'
   destinations:
     type: array
     items:
