--- a/spec/definitions/Payments/PaymentRecipient.yaml
+++ b/spec/definitions/Payments/PaymentRecipient.yaml
@@ -19,3 +19,8 @@ properties:
     type: string
     description: The last name of the recipient
     example: Jones
+required:
+  - dob
+  - account_number
+  - zip
+  - last_name
