--- a/spec/definitions/Payments/CardSource.yaml
+++ b/spec/definitions/Payments/CardSource.yaml
@@ -22,6 +22,13 @@ properties:
     type: string
     description: Card security code. 3 digits, except for Amex (4 digits).	
     example: "956"
+  billing_address:
+    description: The payment source owner's billing address
+    allOf:
+      - $ref: '#/definitions/Address'
+  phone:
+    type: string
+    description: The payment source owner's phone number
 required:
   - number
   - exp_month
