Added billing address and phone to payment source

--- a/spec/definitions/Payments/CardSource.yaml
+++ b/spec/definitions/Payments/CardSource.yaml
@@ -29,6 +29,7 @@ properties:
   phone:
     type: string
     description: The payment source owner's phone number
+    example: +44 7776 054321
 required:
   - number
   - exp_month
