--- a/spec/definitions/Payments/PaymentSource.yaml
+++ b/spec/definitions/Payments/PaymentSource.yaml
@@ -4,9 +4,10 @@ properties:
   id:
     type: string
     description: The payment source identifier. Can be used for subsequent payments
-    example: src_2fc10b92693041f280bbe12cd787b47c
-  source_type:
+    example: src_y3oqhf46pyzuxjbcn2giaqnb44
+  type:
     type: string
+    description: The type of payment source
     example: "card"
   exp_month:
     type: integer
@@ -17,6 +18,10 @@ properties:
     type: integer
     description: The four-digit expiry year (cards)
     example: 2025
+  name: 
+    type: string
+    description: The card-holder name
+    example: "Bruce Wayne"
   scheme: 
     type: string
     description: The card scheme
@@ -25,11 +30,15 @@ properties:
     type: string
     description: The last four digits of the card number
     example: "9996"
+  fingerprint:
+    type: string
+    description: Uniquely identifies this particular card number. You can use this to compare cards across customers
+    example: "F639CAB2745BEE4140BF86DF6B6D6"
   bin:
     type: string
     description: The card issuer BIN
     example: "454347"
-  type:
+  card_type:
     type: string
     description: The card type
     enum: 
@@ -37,7 +46,7 @@ properties:
       - Debit
       - Prepaid
     example: Credit
-  category:
+  card_category:
     type: string
     description: The card category
     enum:
@@ -46,6 +55,7 @@ properties:
     example: Consumer
   issuer:
     type: string
+    description: The name of the card issuer
     example: "GOTHAM STATE BANK"
   issuer_country:
     type: string
@@ -53,6 +63,15 @@ properties:
     minLength: 2
     description: The card issuer country ISO-2 code
     example: "US"
+  avs_check:
+    type: string
+    description: The Address Verification System check result
+    example: S
+  cvv_check:
+    type: string
+    description: The CVV check result
+    example: Y
 
 required:
   - id
+  - type
