--- a/spec/definitions/Payments/PaymentRequest.yaml
+++ b/spec/definitions/Payments/PaymentRequest.yaml
@@ -30,7 +30,7 @@ properties:
         type: string
         format: email
         description: An optional email address to associate with the customer
-        example: darkknight@batcave.com
+        example: jokershere@gmail.com
       name:
         type: string
         description: The customer's name. This will only set the name for *new* customers
