--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -43,6 +43,10 @@ properties:
     type: string
     description: The Gateway response summary
     example: "Approved"
+  3ds_downgraded:
+    type: boolean
+    description: Whether this was a 3DS transaction, downgraded to Non-3DS (when `attempt_n3d` is specified)
+    example: false
   source:
     description: The source of the payment
     type: object
