--- a/spec/paths/payments.yaml
+++ b/spec/paths/payments.yaml
@@ -32,7 +32,7 @@ post:
         Cko-Version:
           $ref: "#/headers/Cko-Version"
     '204':
-      description: Payment was accepted and requires input from the owner
+      description: Payment was accepted but requires input from the owner
       schema:
         $ref: '#/definitions/PaymentRedirectResponse'
     '401':
