--- a/spec/definitions/Payments/PaymentSource.yaml
+++ b/spec/definitions/Payments/PaymentSource.yaml
@@ -9,12 +9,12 @@ properties:
     type: string
     description: The type of payment source
     example: "card"
-  exp_month:
+  expiry_month:
     type: integer
     description: The two-digit expiry month (cards)
     minimum: 1
     example: 6
-  exp_year:
+  expiry_year:
     type: integer
     description: The four-digit expiry year (cards)
     example: 2025
