--- a/spec/definitions/Sources/AddSourceResponse.yaml
+++ b/spec/definitions/Sources/AddSourceResponse.yaml
@@ -8,7 +8,7 @@ properties:
     type: string
     description: The unique identifier of the payment source that can be later used for payments
     example: src_3c4ee15017374d73b27967d0fed31a2d
-  type:
+  source_type:
     type: string
     description: The payment source type
     example: "paypal"
