--- a/spec/definitions/Payments/PaymentRequest.yaml
+++ b/spec/definitions/Payments/PaymentRequest.yaml
@@ -41,9 +41,9 @@ properties:
         allOf:
           - $ref: '#/definitions/Address'
       phone:
-        type: string
         description: The phone number associated with the shipping address
-        example: +44 7776 054321
+        allOf:
+          - $ref: '#/definitions/PhoneNumber'
   capture:
     type: boolean
     description: Whether to capture the payment (if applicable)
