Added Response codes hypermedia link

--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -97,6 +97,13 @@ properties:
         description: A link to capture the payment, where applicable
         example:
           href: "https://api.checkout.com/payments/pay_y3oqhf46pyzuxjbcn2giaqnb44/capture"
+      response-code:
+        type: object
+        allOf:
+          - $ref: '#/definitions/NewLink'
+        description: A link to the full response code details
+        example:
+          href: "https://api.checkout.com/refs/response-codes/10000"
     required:
       - self
           
