Updated payment source phone

--- a/spec/definitions/Sources/SourceRequest.yaml
+++ b/spec/definitions/Sources/SourceRequest.yaml
@@ -16,9 +16,9 @@ properties:
     allOf:
       - $ref: '#/definitions/Address'
   phone:
-    type: string
     description: The payment source owner's phone number
-    example: +44 7776 054321
+    allOf:
+      - $ref: '#/definitions/PhoneNumber'
   customer:
     type: string
     description: The identifier of a customer you wish to attach this source to
