Added action id

--- a/spec/definitions/Payments/PaymentResponse.yaml
+++ b/spec/definitions/Payments/PaymentResponse.yaml
@@ -13,6 +13,10 @@ properties:
     description: Payment unique identifier
     allOf:
       - $ref: '#/definitions/PaymentId'
+  action_id:
+    description: The unique identifier for the action performed against this payment
+    allOf:
+      - $ref: '#/definitions/ActionId'
   amount:
     type: integer
     description: The payment amount 
